--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -17,6 +17,13 @@ framework:
     php_errors:
         log: true
 
+    http_client:
+        scoped_clients:
+            githubContentClient:
+                base_uri: 'https://raw.githubusercontent.com'
+                headers:
+                    Authorization: 'token %env(GITHUB_TOKEN)%'
+
 when@test:
     framework:
         test: true
