--- a/package.json
+++ b/package.json
@@ -1,24 +1,37 @@
 {
-    "devDependencies": {
-        "@fontsource/roboto-condensed": "^4.5.2",
-        "@fortawesome/fontawesome-free": "^6.0.0",
-        "@hotwired/stimulus": "^3.0.0",
-        "@hotwired/turbo": "^7.0.1",
-        "@symfony/stimulus-bridge": "^3.0.0",
-        "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/Resources/assets",
-        "@symfony/webpack-encore": "^2.0.0",
-        "axios": "^0.27.0",
-        "bootstrap": "^5.1.3",
-        "core-js": "^3.0.0",
-        "regenerator-runtime": "^0.13.2",
-        "webpack-notifier": "^1.6.0"
-    },
-    "license": "UNLICENSED",
-    "private": true,
-    "scripts": {
-        "dev-server": "encore dev-server",
-        "dev": "encore dev",
-        "watch": "encore dev --watch",
-        "build": "encore production --progress"
-    }
+  "devDependencies": {
+    "@fontsource/roboto-condensed": "^4.5.2",
+    "@fortawesome/fontawesome-free": "^6.0.0",
+    "@hotwired/stimulus": "^3.0.0",
+    "@hotwired/turbo": "^7.0.1",
+    "@symfony/stimulus-bridge": "^3.0.0",
+    "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/assets",
+    "@symfony/webpack-encore": "^2.0.0",
+    "axios": "^0.27.0",
+    "bootstrap": "^5.1.3",
+    "core-js": "^3.0.0",
+    "regenerator-runtime": "^0.13.2",
+    "webpack-notifier": "^1.6.0"
+  },
+  "license": "UNLICENSED",
+  "private": true,
+  "scripts": {
+    "dev-server": "encore dev-server",
+    "dev": "encore dev",
+    "watch": "encore dev --watch",
+    "build": "encore production --progress"
+  },
+  "name": "symfony-2",
+  "description": "Well hi there! This repository holds the code and script for the [Symfony6 Tutorials](https://symfonycasts.com/tracks/symfony) on SymfonyCasts.",
+  "version": "1.0.0",
+  "main": "webpack.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jmpala/symfony-2.git"
+  },
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/jmpala/symfony-2/issues"
+  },
+  "homepage": "https://github.com/jmpala/symfony-2#readme"
 }
